--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,6 +3,10 @@ version: '1.0-SNAPSHOT'
 main: org.astral.lobbyPlugin.LobbyPlugin
 api-version: '1.20'
 folia-supported: true
+authors:
+  - duk3lo
+  - c127dev
+
 
 commands:
   lobby:
