--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: LobbyPlugin
-version: '1.0-SNAPSHOT'
+version: '1.0.0'
 main: org.astral.lobbyPlugin.LobbyPlugin
 api-version: '1.20'
 folia-supported: true
